--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: "Deploy to aws"
+name: "Deploy"
 
 on: workflow_dispatch
 
@@ -13,7 +13,7 @@ jobs:
             node-version: "21"
 
       - name: "Checkout code"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
  
       - name: "Install dependencies"
         run: npm install
