--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
 
       - name: "Checkout code"
         uses: actions/checkout@v4
+
+      - name: "Install pm2"
+        run: npm install pm2
  
       - name: "Install dependencies"
         run: npm install
